# ai-stuffs

./: README.md
ai_web_scraper/ai/: main.py  parse.py  scrape.py
company_brochure/: AI-driven Company Brochure.ipynb
simple_conversation_ai/: Simple Conversation AI.ipynb
summarizing_website/: Summarizing Website.ipynb
synthetic_image_eval/: README.md  Synthetic Image Evaluation.ipynb  Synthetic Image Evaluation.md  main.py  pyproject.toml
