[project]
name = "synthetic-image-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "diffusers>=0.35.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torch-fidelity>=0.3.0",
    "torchvision>=0.23.0",
    "transformers>=4.57.0",
]
